# fimfarchive

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  urlizer.py
.github/workflows/: main.yml
docs/: readme.tex
fimfarchive/: __init__.py  __main__.py  exceptions.py  fetchers.py  flavors.py  mappers.py  selectors.py  signals.py  stampers.py  stories.py  utils.py  writers.py
fimfarchive/commands/: __init__.py  advent.py  base.py  build.py  check.py  count.py  fetch.py  normal.py  render.py  root.py  update.py
fimfarchive/converters/: __init__.py  alpha_beta.py  base.py  fpub_epub.py  local_utc.py  web_local.py
fimfarchive/converters/alpha_beta/: __init__.py  tags.json
fimfarchive/converters/json_fpub/: __init__.py  book.ncx  book.opf  chapter.html  container.xml
fimfarchive/fetchers/: __init__.py  base.py  directory.py  fimfarchive.py  fimfiction.py  fimfiction2.py
fimfarchive/tasks/: __init__.py  build.py  fetch.py  render.py  update.py
operations/: ansible.cfg  seeder.yml  tracker.yml
operations/common/tasks/: apt.yml  main.yml  time.yml  util.yml
operations/deluge/defaults/: main.yml
operations/deluge/handlers/: main.yml
operations/deluge/tasks/: conf.yml  main.yml  make.yml  prep.yml
operations/deluge/templates/: config  service
operations/opentracker/defaults/: main.yml
operations/opentracker/files/: known_hosts  whitelist
operations/opentracker/handlers/: main.yml
operations/opentracker/tasks/: conf.yml  main.yml  make.yml  prep.yml
operations/opentracker/templates/: config  service
operations/tracker/: Dockerfile  opentracker.conf  whitelist.txt
operations/website/: Cargo.toml  Dockerfile
operations/website/src/: main.rs
tests/: __init__.py  conftest.py  test_fetchers.py  test_flavors.py  test_imports.py  test_mappers.py  test_selectors.py  test_signals.py  test_stampers.py  test_stories.py  test_utils.py  test_writers.py
tests/commands/: __init__.py  test_root.py  test_update.py
tests/converters/: __init__.py  test_alpha_beta.json  test_alpha_beta.py  test_fpub_epub.py  test_json_fpub.json  test_json_fpub.py  test_local_utc.py
tests/fetchers/: __init__.py  test_base.py  test_directory.py  test_fimfarchive.json  test_fimfarchive.py  test_fimfiction.json  test_fimfiction.py  test_fimfiction2.json  test_fimfiction2.py
tests/fixtures/: __init__.py  common.py  responses.py
tests/tasks/: __init__.py  conftest.py  test_build.py  test_update.py
website/: Cargo.toml
