[tool.poetry]
name = "fimfarchive"
version = "0.1.0"
description = "Preserves stories from Fimfiction"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "*"
bbcode = "*"
blinker = "*"
importlib_resources = "*"
jinja2 = "*"
jmespath = "*"
jsonapi-client = "*"
requests = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
requests-mock = "*"
types-jmespath = "*"
types-requests = "*"
types-tqdm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
