[tool.poetry]
name = "fimfarchive"
version = "0.1.0"
description = "Preserves stories from Fimfiction"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
arrow = "*"
bbcode = "*"
blinker = "*"
importlib_resources = "*"
jinja2 = "*"
jmespath = "*"
jsonapi-client = "*"
requests = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
requests-mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
